# pupanvr

./: README.en.md  README.md
app/: CMakeLists.txt
app/3rd/: CMakeLists.txt
app/3rd/jsonrpcc/: CMakeLists.txt
app/3rd/jsonrpcc/example/: Makefile  Makefile.in  server
app/3rd/jsonrpcc/example/.deps/: server-server.Po
app/3rd/jsonrpcc/example/.libs/: server
app/3rd/jsonrpcc/include/: jsonrpc-c.h
app/3rd/jsonrpcc/src/: jsonrpc-c.c
app/3rd/jsonrpcc/src/.deps/: libjsonrpcc_la-cJSON.Plo  libjsonrpcc_la-jsonrpc-c.Plo
app/3rd/jsonrpcc/src/.libs/: libjsonrpcc.la  libjsonrpcc.lai  libjsonrpcc.so.0.0.0
app/appmain/: CMakeLists.txt
app/appmain/account/: CMakeLists.txt  TAccount.cpp
app/appmain/app_dvs/: CMakeLists.txt  dvs_main.cpp
app/appmain/app_dvs/account/: CMakeLists.txt  TAccount.cpp  TAccount.h
app/appmain/app_dvs/dvs_app/: CMakeLists.txt  dvs_main.cpp
app/appmain/app_dvs/dvs_common/: CMakeLists.txt  TDvsAppConfig.cpp  TDvsAppConfig.h
app/appmain/app_dvs/onvif/: imageingClient.cpp  imageingClientLib.cpp  imageingServer.cpp  imageingServerLib.cpp  imageingStub.h
app/appmain/app_dvs/onvif_client/: discoveryClient.c  onvif_client_interface.h
app/appmain/app_dvs/onvif_client/plugin/: wsaapi.h
app/appmain/app_dvs/onvif_discovery/: discoveryC.cpp  discoveryClient.cpp  discoveryH.h  discoveryServer.cpp  onvif_server_intf.cpp
app/appmain/app_dvs/record/: CMakeLists.txt  TPlayView.cpp  TPlayView.h  TRecordManage.cpp  TRecordManage.h  TVideoChannel.h  TVideoSource.cpp  TVideoSourceRtsp.cpp  TVideoSourceRtsp.h
app/appmain/app_view/: CMakeLists.txt
app/appmain/app_view/view/: CMakeLists.txt  TViewConfigMainWindow.cpp  TViewConfigWinBaseFrame.h  TViewLogin.cpp  TViewMainWindow.cpp  TViewObject.cpp  TViewObject.h  TViewPlayToolBar.cpp  TViewPlayer.cpp  TViewPlayer.h  TViewScreenSnap.cpp  TViewScreenSnap.h  TViewStyle.h  TViewSysSetFrame.cpp  view_lvgl.h  view_main.cpp
app/appmain/app_view/view/bll_view/: THciBLLProcess.cpp
app/appmain/app_view/view/res/: arrow_48.c
app/appmain/app_view/viewLvglRes/: CMakeLists.txt  evdev_linux.h  evdev_tslib.c  evdev_tslib.h  halmedia_fbdev.c  view_lvgl_res.c
app/appmain/app_view/viewLvglRes/font/: fontawesome_webfont_14.c
app/appmain/app_view/viewLvglRes/fs/: lv_fs_if.h
app/appmain/app_view/view_app/: CMakeLists.txt  dvs_view.cpp
app/appmain/app_view/view_common/: CMakeLists.txt  TViewConfig.cpp  TViewConfig.h
app/appmain/appconfig/: CMakeLists.txt  TAppConfig.cpp  TAppConfig.h  TAppGlobalConfig.cpp  TAppGlobalConfig.h  appConfig.cpp  appConfig.h
app/appmain/bsp/hi3536c/include/: hi_defines.h
app/appmain/bsp/mc6850/include/: fy_comm_adec.h  fy_comm_aenc.h  fy_comm_aio.h  fy_comm_dsp.h  fy_comm_fb.h  fy_comm_hdmi.h  fy_comm_lcm.h  fy_comm_nna.h  fy_comm_rc.h  fy_comm_region.h  fy_comm_tde.h  fy_comm_vb.h  fy_comm_vda.h  fy_comm_vdec.h  fy_comm_venc.h  fy_comm_vgs.h  fy_comm_vi.h  fy_comm_video.h  fy_comm_vo.h  fy_comm_vpss.h  fy_common.h  fy_defines.h  fy_errno.h  fy_type.h  mpi_adec.h  mpi_aenc.h  mpi_ai.h  mpi_ao.h  mpi_dsp.h  mpi_fb.h  mpi_nna.h  mpi_region.h  mpi_sys.h  mpi_tde.h  mpi_vb.h  mpi_vda.h  mpi_vdec.h  mpi_venc.h  mpi_vgs.h  mpi_vi.h  (+2 more)
app/appmain/common/: CMakeLists.txt  TAppComm.cpp  TAppComm.h  app_info_def.h  sys_defines.h
app/appmain/hal_media/: CMakeLists.txt
app/appmain/hal_media/hi3536c/: CMakeLists.txt  hal_media.c  mpp_def.h  mpp_fb.c  mpp_sys.c  mpp_vo.c
app/appmain/hal_media/hi3536c/common/: sample_comm.h  sample_comm_audio.c  sample_comm_sys.c
app/appmain/hal_media/include/: hal_media.h
app/appmain/hal_media/mc6850/: CMakeLists.txt  fy_mpi_def.h  fy_mpi_fb.c  fy_mpi_fb.h  fy_mpi_sys.c  fy_mpi_sys.h  fy_mpi_vo.c  fy_mpi_vo.h  hal_media.c
app/appmain/hal_media/mc6850/common/: sample_comm.h  sample_comm_vo.c
app/appmain/lib/hi3521a/lib/: libcrypto.so.1.1  libssl.so.1.1
app/appmain/lib/hi3536c/lib/: libcrypto.so.1.1  (+9 more)
app/appmain/lib/include/: git_log_version_number.h
app/appmain/log/: CMakeLists.txt  tlog.cpp  tlog.h
app/appmain/main/: CMakeLists.txt  main.cpp
app/appmain/modules/: CMakeLists.txt  TJsonRPCServerProcess.cpp  TJsonRPCServerProcess.h  TLive555EnvThread.cpp  TLive555EnvThread.h  TServiceBase.cpp  TServiceBase.h  TSysServicesManage.cpp  TSysServicesManage.h
app/appmain/onvif/: imageingC.cpp  imageingH.h
app/appmain/onvif_client/: CMakeLists.txt  discoveryC.c  discoveryH.h  discoveryServer.c  discoveryStub.h  onvif_client_interface.c
app/appmain/onvif_discovery/: CMakeLists.txt  discoveryStub.h
app/appmain/record/: CMakeLists.txt  TPlayView.cpp  TRecordManage.cpp  TRecordManage.h  TVideoChannel.cpp  TVideoChannel.h  TVideoSource.cpp  TVideoSource.h
app/appmain/utils/: CMakeLists.txt  GetClassInstance.h  TMutex.cpp  TMutex.h  TMutexLocker.cpp  TMutexLocker.h  VThreadBase.cpp  VThreadBase.h  accessdef.h
app/appmain/view/: CMakeLists.txt  THciBLLProcess.cpp  THciBLLProcess.h  TViewApp.cpp  TViewApp.h  TViewConfigMainWindow.h  TViewConfigWinBaseFrame.cpp  TViewFontUtils.cpp  TViewFontUtils.h  TViewLogin.cpp  TViewLogin.h  TViewMainMenu.cpp  TViewMainMenu.h  TViewMainWindow.cpp  TViewMainWindow.h  TViewMultiVideoManage.cpp  TViewMultiVideoManage.h  TViewObject.cpp  TViewObject.h  TViewPlayToolBar.cpp  TViewPlayToolBar.h  TViewPlayer.cpp  TViewPlayer.h  TViewScreenSnap.cpp  TViewScreenSnap.h  TViewStyle.cpp  TViewStyle.h  TViewSysSetFrame.cpp  TViewSysSetFrame.h  view_def.h  view_lvgl.cpp  view_lvgl.h  view_main.h
app/appmain/view/bll_view/: THciBLLProcess.h
app/appmain/view/lvgl/: fontawesome_webfont_12.c  fontawesome_webfont_16.c  fontawesome_webfont_20.c
app/appmain/viewLvglRes/: CMakeLists.txt  evdev_linux.c  halmedia_fbdev.c  halmedia_fbdev.h  view_lvgl_res.h
app/appmain/viewLvglRes/fs/: lv_fs_posix.c
app/lvgl/: CMakeLists.txt  Makefile  lv_conf.h  lv_drv_conf.h
app/lvgl/lv_demos/: CMakeLists.txt
app/lvgl/lv_drivers/: lv_drv_conf.h
app/lvgl/lv_drivers/display/: fbdev.c  fbdev.h
app/lvgl/lv_drivers/indev/: evdev.c  libinput.c  libinput_drv.h
app/lvgl/lvgl/: lv_conf.h_bk  lvgl.h
app/lvgl/lvgl/docs/: header.rst
(+63 files in other folders)
