set(CMAKE_C_COMPILER ${CROSS_COMPILE}-gcc)  
set(CMAKE_CXX_COMPILER ${CROSS_COMPILE}-g++)  


cmake_minimum_required (VERSION 2.8)

PROJECT (PUPANVR)

MESSAGE(STATUS "CMAKE_C_COMPILER is " ${CMAKE_C_COMPILER})
MESSAGE(STATUS "CMAKE_CXX_COMPILER is " ${CMAKE_CXX_COMPILER})
MESSAGE(STATUS "BOARD is " ${BOARD})
MESSAGE(STATUS "CHIP is " ${CHIP})
MESSAGE(STATUS "OS is " ${OS})
MESSAGE(STATUS "PRODUCT_MODEL is " ${PRODUCT_MODEL})
MESSAGE(STATUS "PROJECT_DIR is " ${PROJECT_DIR})
MESSAGE(STATUS "BOARD_SDK_DIR is " ${BOARD_SDK_DIR})
MESSAGE(STATUS "BOARD_BSP_DIR is " ${BOARD_BSP_DIR})
MESSAGE(STATUS "THIRD_PARTY_DIR is " ${THIRD_PARTY_DIR})

add_definitions(-O0 -g -Wall -Werror -Wno-unused-function -Wno-unused-variable -Wno-narrowing )

set(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR})

MESSAGE(STATUS "CMAKE_INSTALL_PREFIX is " ${CMAKE_INSTALL_PREFIX})

ADD_SUBDIRECTORY(appmain)
#ADD_SUBDIRECTORY(lvgl)
