ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(appconfig)
ADD_SUBDIRECTORY(log)
ADD_SUBDIRECTORY(utils)
ADD_SUBDIRECTORY(account)
ADD_SUBDIRECTORY(hal_media)
ADD_SUBDIRECTORY(modules)
ADD_SUBDIRECTORY(record)
#ADD_SUBDIRECTORY(onvif_discovery)
#ADD_SUBDIRECTORY(onvif_client)

ADD_SUBDIRECTORY(app_view)
ADD_SUBDIRECTORY(app_dvs)